# micro-admin-videos-python

./: .pdm.toml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/__seedwork/domain/: entities.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_value_objects.py
src/category/domain/: entities.py
src/category/tests/unit/domain/: test_unit_entities.py
uml/: class-diagram.wsd
uml/usecases/: category.usecases.wsd
